--- a/Blog_Sederhana/public/css/styleNavbar.css
+++ b/Blog_Sederhana/public/css/styleNavbar.css
@@ -58,7 +58,7 @@ a:focus {
     left: -280px;
     height: 100vh;
     z-index: 999;
-    background: #2A93D5;
+    background: #005e99;
     color: #fff;
     transition: all 0.3s;
     overflow-y: scroll;
@@ -74,7 +74,7 @@ a:focus {
     height: 35px;
     line-height: 35px;
     text-align: center;
-    background: #2A93D5;
+    background: #005e99;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -106,7 +106,7 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #2A93D5;
+    background: #005e99;
 }
 
 #sidebar ul.components {
@@ -132,7 +132,7 @@ a:focus {
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #2A93D5;
+    background: #005e99;
 }
 
 a[data-toggle="collapse"] {
@@ -150,7 +150,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 1em !important;
     padding-left: 60px !important;
-    background: #2A93D5;
+    background: #005e99;
 }
 
 ul.CTAs {
